------------------------------------------------------------
User: burnett  Sat Mar  1 22:32:26 PST 2003
FluxSvc/xml

Modified Files:
	source_library.xml 
Log Message:
allow selection of range of cos theta, with rate computed appropriately
    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:32:25 PST 2003
FluxSvc/src

Modified Files:
	SurfaceMuons.cxx 
Log Message:
allow selection of range of cos theta, with rate computed appropriately
    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:30:57 PST 2003
FluxSvc/src/test/flux

Modified Files:
	testMgr.cxx 
Log Message:
move header files from interface directory;  
more doc changes, clean out unused methods.

    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:30:57 PST 2003
FluxSvc/src/rootplot

Modified Files:
	rootplot.h 
Log Message:
move header files from interface directory;  
more doc changes, clean out unused methods.

    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:30:57 PST 2003
FluxSvc/src

Modified Files:
	CompositeSource.cxx CompositeSource.h EventSource.cxx 
	ExposureAlg.cxx Flux.cxx FluxMgr.cxx FluxMgr.h FluxSource.cxx 
	FluxSvc.cxx FluxSvc.h Spectrum.h SpectrumFactoryTable.h 
	mainpage.h 
Added Files:
	EventSource.h FluxSource.h 
Log Message:
move header files from interface directory;  
more doc changes, clean out unused methods.

    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:30:57 PST 2003
FluxSvc/doc

Modified Files:
	release.notes 
Log Message:
move header files from interface directory;  
more doc changes, clean out unused methods.

    *
------------------------------------------------------------
User: burnett  Sat Mar  1 22:30:56 PST 2003
FluxSvc/FluxSvc

Modified Files:
	ISpectrum.h 
Removed Files:
	EventSource.h FluxSource.h 
Log Message: